--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="//cdn.dtwave.com/public/antd/2.7.2/dist/antd-green.min.css">
 </head>
 <body>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="https://d3js.org/d3-selection-multi.v0.4.min.js"></script>
+  <!--<script src="https://d3js.org/d3.v4.min.js"></script>-->
+  <!--<script src="https://d3js.org/d3-selection-multi.v0.4.min.js"></script>-->
   <div id="app"></div>
 
   <script>__REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__</script>
